tests/errors/assertion-fail-if-fwd.ja
procedure main()
    int x
    if x = 1 then
        skip
    fi x = 0
